assets/style.css
/* ... */
.site-title {
    font-size: var(--site-title-font-size);
    line-height: var(--title-line-height);
    font-weight: 600;
    color: var(--foreground-color);
}

.site-about {
    font-size: 1.2em;
    line-height: var(--title-line-height);
    color: var(--foreground-color);
}

.site-about p:first-child {
    margin-top: 0px;
}

.site-about p:last-child {
    margin-bottom: 0px;
}

.items-outer {
    max-width: calc(800px - env(safe-area-inset-left) - env(safe-area-inset-left));
    margin: 0 auto calc(env(safe-area-inset-bottom) + var(--grid-item-gap)) auto;
    padding: var(--main-padding);
}

.items {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: var(--grid-item-gap);
    max-width: 100%;
}

.item {
    aspect-ratio: 1/1;
    transition: all 150ms ease-in;
    padding: 0px;
    border-radius: 2px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
    background-color: var(--grid-item-background-color);
}

.item:hover {
    background-color: var(--grid-item-hover-background-color);
}

.item a:link, .item a:visited, .item a:active {
    display: block;
    width: 100%;
}

.item .item-title {
    display: block;
    line-break: auto;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 1.5em;
    line-height: 150%;
    text-align: center;
}

.item .item-info {
    display: block;
    font-size: 0.8em;
    color: var(--foreground-secondary-color);
    text-align: center;
}

.item .item-inner {
    aspect-ratio: 1/1;
    background-size: cover;
    background-position: 50% 50%;
    width: 100%;
    max-height: 100%;
    display: flex;
    flex-direction: row-reverse;
    border-radius: 2px;
}

.overlay-icon {
    width: 32px;
    height: 32px;
    background-size: 32px 32px;
    z-index: 2;
    display: block;
    opacity: 0.85;
    margin-top: 8px;
    margin-right: 8px;
    background-repeat: no-repeat;
    filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.2));
}

.overlay-icon.video-icon {
    background-image: url("overlay/video.png");
}

.overlay-icon.audio-icon {
    background-image: url("overlay/audio.png");
}

.overlay-icon.multi-icon {
    background-image: url("overlay/multi.png");
}

.item-video-icon, .item-audio-icon {
    width: 1em;
    height: 1em;
    filter: var(--icon-secondary-filter);
}

.social-icon {
    width: 1em;
    height: 1em;
    vertical-align: bottom;
    filter: var(--icon-social-filter);
}

.video-container {
    max-width: var(--content-max-width);
    padding-top: 56.25%;
    height: 0px;
    position: relative;
    border-radius: 2px;
    margin-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
}

.video {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 2px;
    z-index: 1;
}

.audio-container {
    margin-bottom: 20px;
}

.audio {
    width: 100%;
}

.top {
    align-items: center;
    display: flex;
    gap: var(--inner-gap);
    margin-bottom: 40px;
}

img.avatar {
    width: 72px;
    height: 72px;
    border-radius: 72px;
    filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.1));
    padding: 10px;
}

.pages-container {
    display: flex;
    align-items: center;
    max-width: calc(800px - env(safe-area-inset-left) - env(safe-area-inset-left));
    margin: 10px auto calc(env(safe-area-inset-bottom) + var(--grid-item-gap)) auto;
    padding: var(--main-padding);
}

.pages-info {
    flex: 1;
    text-align: center;
    vertical-align: middle;
    color: var(--foreground-secondary-color);
    font-weight: 500;
    font-size: 12px;
}

.nav-container {
    text-align: left;
}

.nav {
    display: inline-flex;
    gap: 16px;
    padding: 2px;
    box-sizing: border-box;
    margin: 0px auto 0px auto;
    align-items: center;
    flex-wrap: wrap;
}

.nav-current:link, .nav-current:visited {
    background-color: var(--nav-current-background-color);
    color: var(--nav-current-foreground-color);
    border-radius: 2em;
    font-size: 1em;
    line-height: 1;
    display: inline-block;
    padding: 5px 10px 5px 10px;
}

.nav-current:hover {
    text-decoration: none;
    background-color: var(--link-color);
}

.nav-item:link, .nav-item:visited {
    color: var(--foreground-color);
    font-size: 1em;
    line-height: 1;
    display: inline-block;
    padding: 5px 10px 5px 10px;
}

.nextprev {
    width: 96px;
    text-align: center;
}

.nav-item:hover {
    text-decoration: none;
}

figure {
    margin-top: 20px;
    margin-bottom: 20px;
}

figcaption {
    font-size: 0.8em;
    color: var(--foreground-secondary-color);
}

p, h1, h2, h3, h4, h5, h6, .date, ul, ol, pre, hr {
    max-width: var(--content-max-width);
    margin-left: auto;
    margin-right: auto;
}

.site-about p {
    max-width: 100%;
    margin-left: 0px;
    margin-right: 0px;
}

li:has(input[type="checkbox"]) {
    list-style-type: none;
    margin-left: 0px;
}

.tag-container {
    margin: 20px auto 20px auto;
    max-width: calc(100% - 20px);
    border-bottom: 1px solid var(--border-color);
    padding-bottom: 1em;
    display: flex;
    flex-direction: column;
    gap: 0.5em;
}

.tag-caption {
    font-size: 0.8em;
    display: flex;
    gap: 0.5em;
    align-items: center;
}

.tag-title {
    font-size: 2em;
    font-weight: 500;
}

.tag-count {
    font-size: 0.8em;
    color: var(--foreground-secondary-color);
}

.tags-container {
    max-width: var(--content-max-width);
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    font-size: 0.8em;
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    color: var(--foreground-secondary-color);
    align-items: center;
}

.tags {
    flex: 1;
    display: flex;
    gap: 0.5em;
    flex-wrap: wrap;
}

.tag-cloud {
    max-width: calc(100% - 20px);
    margin: 0px auto 0px auto;
    column-count: 3;
    column-rule: 1px solid var(--border-color);
    column-gap: 20px;
    line-height: 2;
}

.tag-cloud-item {
    display: block;
    font-size: 1em;
}
/* ... */

